<resources>
    <string name="app_name">Moveo_Task</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="notes">Notes</string>
    <string name="newnotes">Add New Note</string>
    <string name="title_activity_login">activity_login</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">activity_register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">First Name</string>
    <string name="lasttname">Last Name</string>
    <string name="pincode">PINCODE</string>
</resources>
